--- a/src/stylesheets/Profile.css
+++ b/src/stylesheets/Profile.css
@@ -26,7 +26,7 @@
     bottom: 10px;
     right: 20px;
     left: 20px;
-    background-color: #ffd53b;
+    background-color: #f69512;
     border: none;
     color: #000000;
     padding: 10px 20px;
@@ -41,7 +41,7 @@
     border-radius: 50%;
     object-fit: cover;
     margin-bottom: 20px;
-    border: 3px solid #ffd53b;
+    border: 3px solid #f69512;
 }
 
 .profile h2 {
@@ -63,7 +63,7 @@
 }
 
 .log-out-button {
-    background-color: #ffd53b;
+    background-color: #f69512;
     border: none;
     color: #ffffff;
     padding: 10px 20px;
@@ -73,7 +73,7 @@
 }
 
 .log-out-button:hover {
-    background-color: #ffcc00;
+    background-color: #fc9008;
 
 }
 
@@ -150,8 +150,8 @@
     right: -5px;
     width: calc(100% ); /* Adjust the width */
     height: calc(97% ); /* Adjust the height */
-    border-bottom: 7px solid #ffd53b; /* Yellow outline on bottom */
-    border-right: 7px solid #ffd53b; /* Yellow outline on right */
+    border-bottom: 7px solid #f69512; /* Yellow outline on bottom */
+    border-right: 7px solid #f69512; /* Yellow outline on right */
     border-radius: 10px;
 }
 
@@ -171,6 +171,6 @@
 
 .progress {
     height: 100%;
-    background-color: #ffcc00;
+    background-color: #fc9008;
     transition: width 0.5s ease;
 }
