--- a/src/stylesheets/App.css
+++ b/src/stylesheets/App.css
@@ -1,30 +1,29 @@
 /* App.css */
 
 .App {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  height: 100%;
+  width: 100%;
   background-color: #fff; /* Match white background */
 }
 
 .top-bar {
-  background-color: rgb(44, 42, 41);
+  background-color: #222831;
   text-align: center;
   justify-content: center;
-  border-bottom: 3px solid #f69512; /* Add a border at the bottom */
+  border-bottom: 1px solid #3a3838; /* Add a border at the bottom */
   position: relative;
 }
 
 .top-bar .app-title {
   position: absolute;
-  color: #f69512;
+  color: #A91D3A;
   left: 60px;
   top: -18px;
   font-size: 40px; /* Adjust font size */
   font-family: 'League Spartan', sans-serif; /* League Spartan font */
-  //text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
+//text-shadow: 0 0 1px black, 0 0 1px black, 0 0 1px black, 0 0 1px black;
+  cursor: default;
 }
-
 
 .top-bar .log-in-button {
   position: absolute;
@@ -33,12 +32,12 @@
   font-size: 16px; /* Decreased font size */
   border-radius: 20px; /* Added border radius for rounded corners */
   padding: 10px 20px; /* Adjusted padding */
-  background: #f69512;
+  background: #A91D3A;
   border: none;
 }
 
 .top-bar .log-in-button:hover {
-  background: #fc9008; /* Change background color on hover */
+  background: #C73659; /* Change background color on hover */
   cursor: pointer;
 }
 
@@ -49,19 +48,14 @@
   font-size: 16px; /* Decreased font size */
   border-radius: 20px; /* Added border radius for rounded corners */
   padding: 10px 20px; /* Adjusted padding */
-  background: #f69512;
+  background: #A91D3A;
   border: none;
 }
 
 .top-bar .register-button:hover {
-  background: #fc9008; /* Change background color on hover */
+  background: #C73659; /* Change background color on hover */
   cursor: pointer;
 }
-
-
-
-
-
 
 .top-bar .create-button {
   position: absolute;
@@ -70,34 +64,30 @@
   font-size: 16px; /* Decreased font size */
   border-radius: 20px; /* Added border radius for rounded corners */
   padding: 10px 20px; /* Adjusted padding */
-  background: #f69512;
+  background: #A91D3A;
   border: none;
 }
 
 .top-bar .create-button:hover {
-  background: #fc9008; /* Change background color on hover */
+  background: #C73659; /* Change background color on hover */
   cursor: pointer;
 }
-
-
-
-
-/* App.css */
 
 .profile-button {
   width: 50px;
   height: 50px;
   position: absolute;
   right: 20px;
-  bottom: 6px;
+  bottom: 4px;
   background: transparent;
   border: 2px solid transparent; /* Yellow border */
   border-radius: 50%; /* Circular button */
   transition: border-color 0.3s; /* Added transition for border color change */
+  cursor: pointer;
 }
 
 .profile-button:hover {
-  border-color: #fc9008; /* Darken the border slightly on hover */
+  border-color: #C73659; /* Darken the border slightly on hover */
 }
 
 .profile-button img {
@@ -113,23 +103,26 @@
 
 .main-content {
   display: flex;
-  flex: 1;
+  flex-direction: row;
+  height: 100%;
+  width: 100%;
 }
 
 .left-sidebar {
-  background-color: rgb(255, 255, 255);
+  background-color: #222831;
   padding: 10px;
-  color: #333; /* Changed text color */
   width: 100px;
+  height: 91.2vh;
   display: flex;
   flex-direction: column;
   align-items: center; /* Align buttons vertically */
-  border-right: 3px solid #f69512; /* Add a border on the right */
+  border-right: 1px solid #3a3838; /* Add a border on the right */
+  z-index: 2; /* Higher value to be on top */
 }
 
 .sidebar-button {
-  background-color: rgb(255, 255, 255);
-  color: #333; /* Text color */
+  background-color: #222831;
+  color: #aaa; /* Text color */
   border: none; /* Remove border */
   padding: 10px;
   margin-bottom: 10px;
@@ -144,30 +137,37 @@
 }
 
 .sidebar-button:hover {
-  background-color: #f69512; /* Darker yellow on hover */
+  background-color: #A91D3A; /* Darker yellow on hover */
 }
 
-.App-header {
-  background-color: #f5f5f5;
+.app-body {
+  background-color: #222831;
   text-align: center;
-  flex: 1;
-  display: flex;
-  align-items: center; /* Center content vertically */
-  flex-direction: column; /* Center content vertically */
+  width: 100vw;
+  height: 93.4vh;
+
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+  background-color: #222831;
+  overflow: hidden;
 }
 
 .search-bar {
   width: 25%; /* Set the width to a fixed value */
   padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+  border: none;
+  background: #393E46;
+  border-radius: 18px;
   font-size: 16px;
   margin-top: 10px;
   margin-bottom: 10px;
-
+  color:white;
 }
 
-.chef-hat{
+.chef-hat {
   width: 40px;
   height: 40px;
   margin-top: 20px;
@@ -216,9 +216,9 @@
 }
 
 .notification img {
-    width: 80px;
-    height: 80px;
-    margin-top: 10px;
+  width: 80px;
+  height: 80px;
+  margin-top: 10px;
 }
 
 /* Add animation delay */
@@ -229,9 +229,80 @@
   animation-delay: 2s;
 }
 
+.filter-section {
+  position: relative;
+  display: flex;
+  text-align: center;
+  background: white;
+}
 
+.dropdown1 {
+  position: absolute;
+  top: -40px; /* Position dropdown below the header */
+  right: 600px; /* Align dropdown with the left edge of the container */
+  z-index: 1001; /* Ensure the dropdown appears above other content */
+  width: 120px;
+  text-align: center;
+  color: #aaa;
+}
 
+.dropdown2 {
+  position: absolute;
+  top: -40px; /* Position dropdown below the header */
+  right: 500px; /* Align dropdown with the left edge of the container */
+  z-index: 1001; /* Ensure the dropdown appears above other content */
+  width: 120px;
+  text-align: center;
+  color: #aaa;
+}
+
+.dropdown-header {
+  text-align: center;
+  margin-bottom: 19px;
+  cursor: default;
+}
+
+.filter-select {
+    width: 100px;
+    height: 200px;
+    padding: 5px;
+    border: 1px solid #3a3838;
+    border-radius: 5px;
+    background: #222831;
+    color: #aaa;
+    cursor: pointer;
+
+}
+
+.clear-filter-button {
+  position: absolute;
+  right: 380px;
+  bottom: 10px;
+  font-size: 16px; /* Decreased font size */
+  border-radius: 20px; /* Added border radius for rounded corners */
+  padding: 10px 20px; /* Adjusted padding */
+  background: #A91D3A;
+  border: none;
+}
+
+.search-bar-select {
+    width: 25%; /* Set the width to a fixed value */
+    padding: 10px;
+    border: none;
+    background: #393E46;
+    border-radius: 18px;
+    font-size: 16px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.filter-search {
+  width: 90px;
+  background: #222831;
+  color: #aaa;
+}
 
 .App-link {
   color: #61dafb;
 }
+
