--- a/src/stylesheets/Awards.css
+++ b/src/stylesheets/Awards.css
@@ -1,9 +1,10 @@
 .awards-wrapper {
     margin: 0; /* Remove default margin */
     padding: 0; /* Remove default padding */
-    width: 99%;
+    width: 100%;
     height: 100%; /* Full viewport height */
     position: relative; /* Ensure it acts as a relative container */
+    overflow: hidden;
 }
 
 .awards-container {
@@ -13,7 +14,7 @@
 
 .cook-book {
     width: 100%; /* Fill the container width */
-    height: 99%; /* Fill the container height */
+    height: 100%; /* Fill the container height */
 }
 
 .welcome-aboard {
