--- a/src/stylesheets/RecipeDetails.css
+++ b/src/stylesheets/RecipeDetails.css
@@ -5,12 +5,12 @@
     position: absolute;
     top: 40px;
     left: 140px;
-    border: 1px solid #e0e0e0;
+    color : white;
     padding: 20px;
     margin: 50px auto;
     border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    background-color: #222831;
 }
 
 .recipe-container-2 {
@@ -22,12 +22,12 @@
     left: 498px;
     right: 270px;
     bottom: 30px;
-    border: 1px solid #e0e0e0;
+    color : white;
     padding: 20px 30px 20px 30px;
     margin: 50px auto;
     border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    background-color: #222831;
     overflow-y: auto;
 }
 
@@ -39,12 +39,12 @@
     position: absolute;
     top: 40px;
     right: 30px;
-    border: 1px solid #e0e0e0;
+    color : white;
     padding: 20px;
     margin: 50px auto;
     border-radius: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    background-color: #222831;
     overflow-y: auto;
 }
 
@@ -57,6 +57,15 @@
     margin-bottom: 5px; /* Add margin between each ingredient */
 }
 
+.recipe-container-3 ul {
+    text-align: left;
+}
+
+.recipe-container-3 ul li {
+    list-style-type: none;
+    margin-bottom: 5px;
+}
+
 
 .recipe-details-container img {
     width: 300px;
@@ -66,7 +75,7 @@
 }
 
 .recipe-details-review-page-button {
-    background-color: #f69512;
+    background-color: #A91D3A;
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
@@ -76,12 +85,12 @@
 }
 
 .recipe-details-review-page-button:hover {
-    background-color: #fc9008;
+    background-color: #C73659;
 }
 
 
 .recipe-details-edit-button {
-    background-color: #f69512;
+    background-color: #A91D3A;
     color: black;
     border: none;
     border-radius: 5px;
@@ -95,7 +104,7 @@
 }
 
 .recipe-details-edit-button:hover {
-    background-color: #fc9008;
+    background-color: #C73659;
 }
 
 .recipe-details-delete-button {
@@ -117,7 +126,7 @@
 }
 
 .recipe-details-edit-button-review {
-    background-color: #f69512;
+    background-color: #A91D3A;
     color: black;
     border: none;
     border-radius: 5px;
@@ -131,7 +140,7 @@
 }
 
 .recipe-details-edit-button-review:hover {
-    background-color: #fc9008;
+    background-color: #C73659;
 }
 
 .recipe-details-delete-button-review {
@@ -153,7 +162,7 @@
 }
 
 .recipe-details-review-button {
-    background-color: #f69512;
+    background-color: #A91D3A;
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
@@ -167,7 +176,7 @@
 }
 
 .recipe-details-review-button:hover {
-    background-color: #fc9008;
+    background-color: #C73659;
 }
 
 .recipe-title {
