--- a/src/stylesheets/Login.css
+++ b/src/stylesheets/Login.css
@@ -13,7 +13,7 @@
 }
 
 .modal-content {
-    background-color: white;
+    background-color:  #222831;
     padding: 70px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5); /* Box shadow for depth effect */
@@ -22,6 +22,7 @@
     flex-direction: column; /* Arrange elements in a vertical fashion */
     align-items: center; /* Center align the elements */
     font-size: 20px;
+    color: white;
 }
 
 .form-group {
@@ -42,6 +43,8 @@
     border: 1px solid #ccc; /* Add a border to the input */
     border-radius: 5px; /* Add border radius */
     box-sizing: border-box; /* Include padding and border in the width */
+    background: #393E46;
+    color: white;
 }
 
 .log-in-submit {
