--- a/src/stylesheets/RecipeDetails.css
+++ b/src/stylesheets/RecipeDetails.css
@@ -1,5 +1,6 @@
 .recipe-details-container {
     height: 740px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -10,7 +11,7 @@
     margin: 50px auto;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-    background-color: #222831;
+    background-color:  #2c313a;
 }
 
 .recipe-container-2 {
@@ -20,20 +21,20 @@
     position: absolute;
     top: 40px;
     left: 498px;
-    right: 270px;
+    right: 330px;
     bottom: 30px;
     color : white;
     padding: 20px 30px 20px 30px;
     margin: 50px auto;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-    background-color: #222831;
+    background-color:  #2c313a;
     overflow-y: auto;
 }
 
 .recipe-container-3 {
     height: 740px;
-    width: 180px;
+    width: 240px;
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -44,7 +45,7 @@
     margin: 50px auto;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-    background-color: #222831;
+    background-color:  #2c313a;
     overflow-y: auto;
 }
 
@@ -62,14 +63,13 @@
 }
 
 .recipe-container-3 ul li {
-    list-style-type: none;
     margin-bottom: 5px;
 }
 
 
 .recipe-details-container img {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 250px;
     border-radius: 5px;
     align-self: center; /* Center the image horizontally */
 }
