--- a/src/stylesheets/Reviews.css
+++ b/src/stylesheets/Reviews.css
@@ -32,7 +32,7 @@
     align-items: flex-start; /* Align items at the start of the container */
     gap: 80px; /* Space between the elements */
     margin-bottom: 20px;
-    background: #222831;
+    background: #2c313a;
     padding: 50px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a subtle shadow */
