--- a/src/stylesheets/Profile.css
+++ b/src/stylesheets/Profile.css
@@ -17,7 +17,7 @@
     margin: 50px auto;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    background-color: #222831;
+    background-color: #2c313a;
     color: white;
 }
 
@@ -50,7 +50,7 @@
     margin-bottom: 25px;
 }
 
-.profile-reviews, profile-recipes p {
+.profile-reviews p, .profile-recipes p {
     font-size: 1rem;
     color: #aaa;
     margin: 5px 0;
@@ -93,14 +93,12 @@
     margin: 50px auto;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    background-color: #222831;
+    background-color: #2c313a;
 }
 
-.profile-recipes h2 {
-    font-size: 1.5rem;
+.profile-recipes p {
     color: #A91D3A;
     margin-top: 4px;
-    margin-bottom: 0px;
 }
 
 .recipe-list-profile {
@@ -121,7 +119,7 @@
     margin: 50px auto;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    background-color: #222831;
+    background-color: #2c313a;
     overflow-y: auto; /* Enable vertical scrolling */
 }
 
@@ -146,23 +144,24 @@
 .recipe-item-profile {
     text-align: center;
     cursor: pointer;
-    background:  #222831;
-
+    background: #2c313a;
+    width: 210px;
     border: none;
+    border-radius: 10px;
 }
 
 .recipe-item-profile:hover {
     transform: translateY(-5px); /* Move the item up slightly on hover */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Add a subtle shadow */
 }
 
 .recipe-item-profile:hover::after {
     content: '';
     position: absolute;
-    bottom: -5px;
+    bottom: 0;
     right: -5px;
-    width: calc(100% ); /* Adjust the width */
-    height: calc(97% ); /* Adjust the height */
+    width: calc(99% ); /* Adjust the width */
+    height: calc(95% ); /* Adjust the height */
     border-bottom: 7px solid #A91D3A; /* Yellow outline on bottom */
     border-right: 7px solid #A91D3A; /* Yellow outline on right */
     border-radius: 10px;
@@ -178,9 +177,9 @@
 .review-item {
     text-align: center;
     cursor: pointer;
-    background:  #222831;
+    background:  #2c313a;
     width: 200px;
-    height: 215px;
+    height: 240px;
     margin-bottom: 20px;
     border: none;
     padding: 10px;
@@ -188,16 +187,16 @@
 
 .review-item:hover {
     transform: translateY(-5px);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .review-item:hover::after {
     content: '';
     position: absolute;
-    bottom: -35px;
+    bottom: -5px;
     right: -5px;
-    width: calc(100%);
-    height: calc(113%);
+    width: calc(99%);
+    height: calc(99%);
     border-bottom: 7px solid #A91D3A;
     border-right: 7px solid #A91D3A;
     border-radius: 10px;
@@ -207,17 +206,20 @@
     width: 175px;
     height: 175px;
     border-radius: 10px 10px 10px 10px; /* Round the top corners */
-    margin-bottom: -15px;
 }
 
-.review-item h2 {
+.review-item .star {
+    font-size: 24px;
+}
+
+.review-item p {
     color: #A91D3A;
     margin-bottom: -30px;
 }
 
 .review-item-button {
     border: none;
-    background-color: #222831;
+    background-color: #2c313a;
 }
 
 .progress-bar {
