--- a/src/stylesheets/Register.css
+++ b/src/stylesheets/Register.css
@@ -1,5 +1,5 @@
 /* Register.css */
-.modal {
+.register-modal {
     position: fixed;
     z-index: 999;
     left: 0;
@@ -13,7 +13,7 @@
     color: white;
 }
 
-.modal-content {
+.register-modal-content {
     background-color: #222831;
     padding: 70px;
     border-radius: 8px;
@@ -25,7 +25,7 @@
     font-size: 20px;
 }
 
-.form-group {
+.register-modal-content .form-group {
     margin-bottom: 15px; /* Add some spacing between form groups */
     display: flex;
     flex-direction: column; /* Arrange input and label in a vertical fashion */
@@ -33,11 +33,11 @@
     width: 100%; /* Set the width to 100% */
 }
 
-.form-group label {
+.register-modal-content .form-group label {
     margin-bottom: 5px; /* Add some spacing between label and input */
 }
 
-.form-group input {
+.register-modal-content .form-group input {
     width: 300px; /* Set the width to 100% */
     padding: 8px; /* Add some padding to the input */
     border-radius: 5px; /* Add border radius */
